--- a/plugin/src/main/resources/plugin.yml
+++ b/plugin/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ main: ca.allanwang.minecraft.toolbox.ToolboxPlugin
 description: A bit of everything
 version: 0.1
 author: Allan Wang
+api-version: 1.15
 
 commands:
   mct:
@@ -11,3 +12,5 @@ commands:
   mct help:
     description: Minecraft Toolbox Help
     usage: Use /mct help for help.
+  mct compass follow:
+    description: Change compass so that it follows a player.
